@@ -4,6 +4,7 @@
  - optimize size of all PNG images
  - use SystemClock.elapsedRealtime() to get elapsed time in milliseconds in AriadneLocation.isRecent()
  - issue #78 : add classes to convert (rotate) coordinates
+ - Redesign arrow pointing to destination, using coordinates class
 
  v0.1.1 (released 04Dec2013)
  
